# bash-scripts

./: README.md
Cpp/: cpp_init.sh
Cpp/Util/: CMakeLists.txt
System/: stow_dotfiles.sh
